--- a/amazon3.html
+++ b/amazon3.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Clone</title>
+    <div class="nav-bar" id="navigation"></div>
     <link rel="stylesheet" href="amazon3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 />
+
 </head>
 <body>
     <nav class="nav-container">
@@ -24,14 +26,13 @@
         <div class="nav-search">
             <div class="nav-search-gategory">
                 <p>All</p>
-                <img src="./assets/dropdown_icon.png" height="12" alt="">
+                <img src="./assets/dropdown_icon.png" height="10" alt="">
             </div>
             <input type="text" class="nav-search-input" placeholder="Search Amazon">
             <img src="./assets/search_icon.png" class="nav-search-icon" alt="">
         </div>
         <div class="nav-language">
-            <img src="./assets/us_flag.png" width="25px" alt="">
-            <p>EN</p>
+            <img src="./assets/us_flag.png" width="25px" alt=""><p>EN</p>
             <img src="./assets/dropdown_icon.png" width="8px" alt="">
         </div>
         <div class="nav-text">
@@ -130,6 +131,7 @@
     </div>
         <div class="products-slider">
             <h2>Best Sellers in Sports & Outdoors</h2>
+            
             <div class="products">
                 <img src="./assets/cup.jpg" alt="">
                 <img src="./assets/weight.jpg" alt="">
@@ -210,7 +212,212 @@
             <img src="./assets/play.avif" alt="">
             <a href="/">Shop More</a>
         </div>
-
+    </div>
+    <div class="products-slider">
+        <h2>Best Sellers in Grocery & Gourmet Food</h2>
+        <div class="products">
+            <img src="./assets/celsuis.jpg" alt="">
+            <img src="./assets/protein.jpg" alt="">
+            <img src="./assets/sparkice.jpg" alt="">
+            <img src="./assets/expresso.jpg" alt="">
+            <img src="./assets/purgum.jpg" alt="">
+            <img src="./assets/donut.jpg" alt="">
+            <img src="./assets/liquiddeath.jpg" alt="">
+            <img src="./assets/nespresso.jpg" alt="">
+            <img src="./assets/snackbox.jpg" alt="">
+            <img src="./assets/propel.jpg" alt="">
+            <img src="./assets/corepower.jpg" alt="">
+            <img src="./assets/solimo.jpg" alt="">
+            <img src="./assets/kins.jpg" alt="">
+            <img src="./assets/waterloo.jpg" alt="">
+            <img src="./assets/trident.jpg" alt="">
+            </div>
+    </div>
+    <div class="products-slider">
+        <h2>Best Sellers in Toys & Games</h2>
+        <div class="products">
+            <img src="./assets/ballon.jpg" alt="">
+            <img src="./assets/REUSE.jpg" alt="">
+            <img src="./assets/buncho.jpg" alt="">
+            <img src="./assets/playset.jpg" alt="">
+            <img src="./assets/cards.jpg" alt="">
+            <img src="./assets/decorations.jpg" alt="">
+            <img src="./assets/floatie.jpg" alt="">
+            <img src="./assets/uno.jpg" alt="">
+            <img src="./assets/partysticks.jpg" alt="">
+            <img src="./assets/playdoh.jpg" alt="">
+            <img src="./assets/bazooka.jpg" alt="">
+            <img src="./assets/tapple.jpg" alt="">
+            <img src="./assets/glowsticks.jpg" alt="">
+            <img src="./assets/cube.jpg" alt="">
+            <img src="./assets/auto.jpg" alt="">
+            </div>
+    </div>
+    <div class="box-row">
+        <div class="box-col">
+            <h3>Japanese-made products
+            </h3>
+            <img src="./assets/japan.jpg" alt="">
+            <a href="/">See more from The Japan Store</a>
+        </div>
+        <div class="box-col">
+            <h3>Summer beauty must-haves</h3>
+            <img src="./assets/beauty.jpg" alt="">
+            <a href="/">Get ready to Glow</a>
+        </div>
+        <div class="box-col">
+            <h3>Nourish your pup with Badlands Ranch
+            </h3>
+            <img src="./assets/pup.jpg" alt="">
+            <a href="/">See More</a>
+        </div>
+        <div class="box-col">
+            <h3>New & classics from Stanley</h3>
+            <img src="./assets/stanley.avif" alt="">
+            <a href="/">Shop More</a>
+        </div>
+    </div>
+    <div class="products-slider">
+        <h2>Best Sellers in Home & Kitchen</h2>
+        <div class="products">
+            <img src="./assets/stanley2.jpg" alt="">
+            <img src="./assets/terro.jpg" alt="">
+            <img src="./assets/zevo.jpg" alt="">
+            <img src="./assets/sheet.jpg" alt="">
+            <img src="./assets/flask.jpg" alt="">
+            <img src="./assets/fiber.jpg" alt="">
+            <img src="./assets/shower.jpg" alt="">
+            <img src="./assets/safer.jpg" alt="">
+            <img src="./assets/bedding.jpg" alt="">
+            <img src="./assets/frame.jpg" alt="">
+            <img src="./assets/zulay.jpg" alt="">
+            <img src="./assets/natria.jpg" alt="">
+            <img src="./assets/repellant.jpg" alt="">
+            <img src="./assets/fan.jpg" alt="">
+            <img src="./assets/hose.jpg" alt="">
+            </div>
+    </div>
+    <div class="products-slider">
+        <h2>Best Sellers in Cell Phones & Accessories</h2>
+        <div class="products">
+            <img src="./assets/glass1.jpg" alt="">
+            <img src="./assets/glass2.jpg" alt="">
+            <img src="./assets/glass3.jpg" alt="">
+            <img src="./assets/glass4.jpg" alt="">
+            <img src="./assets/glass5.jpg" alt="">
+            <img src="./assets/glass6.jpg" alt="">
+            <img src="./assets/glass7.jpg" alt="">
+            <img src="./assets/glass8.jpg" alt="">
+            <img src="./assets/glass9.jpg" alt="">
+            <img src="./assets/glass10.jpg" alt="">
+            <img src="./assets/glass11.jpg" alt="">
+            <img src="./assets/glass12.jpg" alt="">
+            <img src="./assets/glass13.jpg" alt="">
+            <img src="./assets/glass14.jpg" alt="">
+            <img src="./assets/glass15.jpg" alt="">
+            </div>
+    </div>
+    <div class="box-row">
+        <div class="box-col">
+            <h3>$0 Grubhub delivery fees
+            </h3>
+            <img src="./assets/japan.jpg" alt="">
+            <a href="/">See more from The Japan Store</a>
+        </div>
+        <div class="box-col">
+            <h3>Discover hot new games</h3>
+            <img src="./assets/beauty.jpg" alt="">
+            <a href="/">Get ready to Glow</a>
+        </div>
+        <div class="box-col">
+            <h3>On-court essentials
+            </h3>
+            <img src="./assets/racket.jpg" alt="">
+            <a href="/">See More</a>
+        </div>
+        <div class="box-col">
+            <h3>Hear Stephen Fry read Harry Potter</h3>
+            <img src="./assets/train.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+    </div>
+    <div class="products-slider">
+        <h2>Best Sellers in Computers & Accessories</h2>
+        <div class="products">
+            <img src="./assets/pc1.jpg" alt="">
+            <img src="./assets/pc2.jpg" alt="">
+            <img src="./assets/pc3.jpg" alt="">
+            <img src="./assets/pc4.jpg" alt="">
+            <img src="./assets/pc5.jpg" alt="">
+            <img src="./assets/pc6.jpg" alt="">
+            <img src="./assets/pc7.jpg" alt="">
+            <img src="./assets/pc8.jpg" alt="">
+            <img src="./assets/pc9.jpg" alt="">
+            <img src="./assets/pc10.jpg" alt="">
+            <img src="./assets/pc11.jpg" alt="">
+            <img src="./assets/pc12.jpg" alt="">
+            <img src="./assets/pc13.jpg" alt="">
+            <img src="./assets/pc14.jpg" alt="">
+            <img src="./assets/pc15.jpg" alt="">
+            </div>
+    </div>
+    <div class="nav-down">
+        See personalized recommendations</div>
+    <div class="nav-down">Sign in</div>
+    <div class="nav-down">New customer?Start here.></div>
+    </div>
+        
+    <div class="footer">
+        <a href="#navigation">Back To Top</a>
+    </div>
+    <footer>
+        <div class="customer-footer">
+            <div class="cus1">
+                <p class="cust-first">Get to Know Us</p>
+                <p class="cust-second">Careers</p>
+                <p class="cust-second">Blog</p>
+                <p class="cust-second">About Amazon</p>
+                <p class="cust-second">Investor Relations</p>
+                <p class="cust-second">Amazon Devices</p>
+                <p class="cust-second">Amazon Science</p>
+            </div>
+            <div class="cus2">
+                <div class="cus1">
+                    <p class="cust-first">Make Money with Us</p>
+                    <p class="cust-second">Sell products on Amazon</p>
+                    <p class="cust-second">Sell on Amazon Business</p>
+                    <p class="cust-second">Sell apps on Amazon</p>
+                    <p class="cust-second">Become an Affiliate</p>
+                    <p class="cust-second">Advertise Your Products</p>
+                    <p class="cust-second">Self-Publish with Us</p>
+                    <p class="cust-second">Host an Amazon Hubs</p>
+                    <p class="cust-second">›  See More Make Money with Us</p>
+                </div>
+            </div>
+            <div class="cus3"></div>
+            <div class="cus1">
+                <p class="cust-first">	
+                    Amazon Payment Products
+                    </p>
+                <p class="cust-second">Amazon Business Card</p>
+                <p class="cust-second">Blog</p>
+                <p class="cust-second">Shop with Points</p>
+                <p class="cust-second">Reload Your Balance</p>
+                <p class="cust-second">Amazon Currency Converter</p>
+            </div>
+            <div class="cus4"></div>
+            <div class="cus1">
+                <p class="cust-first">Let Us Help You</p>
+                <p class="cust-second">Amazon and COVID-19</p>
+                <p class="cust-second">Your Account</p>
+                <p class="cust-second">Your Orders</p>
+                <p class="cust-second">Shipping Rates & Policies</p>
+                <p class="cust-second">Returns & Replacements</p>
+                <p class="cust-second">Manage Your Content and Devices</p>
+                <p class="cust-second">Amazon Assistant</p>
+                <p class="cust-second">Help</p>
+            </div>
+        </div>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -219,6 +426,9 @@
   // Optional parameters
   direction: 'horizontal',
   loop: true,
+  autoplay: {
+    delay: 1000,
+  },
 
   // If we need pagination
   pagination: {
